<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actStart"
        android:orderInCategory="100"
        android:title="@string/is_emrine_basla"
        app:showAsAction="never" />
    <item
        android:id="@+id/actReturn"
        android:orderInCategory="100"
        android:title="@string/is_emrine_devam_et"
        app:showAsAction="never" />
    <item
        android:id="@+id/actWait"
        android:orderInCategory="100"
        android:title="@string/is_emrini_beklet"
        app:showAsAction="never" />
    <item
        android:id="@+id/actFinish"
        android:orderInCategory="100"
        android:title="@string/is_emrini_bitir"
        app:showAsAction="never" />
</menu>