<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.taskDetail.TaskDetailFragment">

    <TextView
        android:id="@+id/tvTalep"
        android:layout_width="@dimen/task_detail_item_width"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/task_detail_vertical_margin"
        android:layout_marginHorizontal="@dimen/task_detail_horizontal_margin"
        android:text="@string/talep"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/task_detail_horizontal_margin"
        android:text="@string/tasima"
        android:maxWidth="@dimen/task_detail_max_width"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"

        app:layout_constraintStart_toEndOf="@+id/tvTalep"
        app:layout_constraintTop_toTopOf="@+id/tvTalep" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="@dimen/task_detail_item_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/task_detail_horizontal_margin"
        android:layout_marginVertical="@dimen/task_detail_vertical_margin"
        android:text="@string/yapilan_is_aciklamasi"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvService" />

    <TextView
        android:id="@+id/tvWorkDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/task_detail_horizontal_margin"
        android:maxWidth="@dimen/task_detail_max_width"
        android:text="@string/hasta_odaya_tasima_talebi"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="@dimen/task_detail_item_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/task_detail_horizontal_margin"
        android:layout_marginVertical="@dimen/task_detail_vertical_margin"
        android:text="@string/durum"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWorkDesc" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/task_detail_max_width"
        android:text="@string/basla"
        android:layout_marginStart="@dimen/task_detail_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="@dimen/task_detail_item_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/task_detail_horizontal_margin"
        android:layout_marginVertical="@dimen/task_detail_vertical_margin"
        android:text="@string/uzerine_alan_personel"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvStatus" />

    <TextView
        android:id="@+id/tvEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/task_detail_max_width"
        android:text="@string/hasan_huseyin"
        android:layout_marginStart="@dimen/task_detail_horizontal_margin"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="110dp"
        android:text="@string/baslangic"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmployee" />

    <TextView
        android:id="@+id/tvStartTime"
        android:layout_width="wrap_content"
        android:maxWidth="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_27_07_2021_10_30"
        android:textColor="@color/black"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="110dp"
        android:text="@string/bitis"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvEmployee" />

    <TextView
        android:id="@+id/tvFinishTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/_27_07_2021_n11_30"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:maxWidth="120dp"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="@dimen/task_detail_horizontal_margin"
        android:text="@string/gecen_sure"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmployee" />


    <TextView
        android:id="@+id/tvPassedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:maxWidth="120dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textView8"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />



</androidx.constraintlayout.widget.ConstraintLayout>