<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.tasks.TasksFragment">


    <TextView
        android:id="@+id/tv_room_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tasks_margin"
        android:text="@string/oda_no"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tasks_margin"
        android:paddingHorizontal="10dp"
        android:text="@string/hizmet"
        android:textColor="@color/black"

        app:layout_constraintStart_toEndOf="@+id/tv_room_no"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_work_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tasks_margin"
        android:maxLines="1"
        android:text="@string/talep"
        android:textColor="@color/black"

        app:layout_constraintStart_toEndOf="@+id/tvService"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/tasks_margin"
        android:maxLines="1"
        android:layout_marginEnd="15dp"
        android:text="@string/durum"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvEmployee"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvEmployee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:maxLines="1"
        android:text="@string/atanan_personel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_tasks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_room_no" />

<!--    <com.google.android.material.floatingactionbutton.FloatingActionButton-->
<!--        android:id="@+id/fab_add_task"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_gravity="bottom|end"-->
<!--        android:layout_margin="16dp"-->
<!--        android:src="@drawable/ic_add" />-->

</androidx.constraintlayout.widget.ConstraintLayout>