<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.taskAdd.TaskAddFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:layout_marginHorizontal="30dp"
        android:text="@string/oda_no"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtRoomNo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:background="@drawable/border"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:padding="10dp"
        android:hint="@string/oda_no"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        android:inputType="number"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:text="@string/hizmet"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />


    <Spinner
        android:id="@+id/spnService"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:text="@string/yapilacak_is"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Spinner
        android:id="@+id/spnWorkToDo"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/spinner_background"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />


    <TextView
        android:id="@+id/textView5"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="40dp"
        android:text="@string/aciklama"
        android:textColor="@color/black"
        android:textSize="@dimen/task_detail_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/edtDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/border"
        android:gravity="start"
        android:layout_marginStart="30dp"
        android:padding="10dp"
        android:minLines="7"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:hint="@string/aciklama"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        android:inputType="textMultiLine"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnTaskAdd"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/olustur"
        android:textAllCaps="false"
        android:layout_marginTop="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>